--- a/src/server_candidate/Source/views/candidate/content_home.hbs
+++ b/src/server_candidate/Source/views/candidate/content_home.hbs
@@ -7,7 +7,7 @@
       <div class="item_company_candidate p-2 m-2">
         <img src="{{this.avatarEmployer}}" alt="logo" class="logo_company_home_candidate">
         <a class="title_recuit_company_home_candidate" href="/candidate/detail_job/{{this.doc}}">{{this.title}}</a>
-        <div class="name_company_home_candidate">{{this.nameEmployer}}</div>
+        <a class="name_company_home_candidate" href="http://localhost:3032/candidate/profile_employer?id={{this.belong_employer}}">{{this.nameEmployer}}</a>
         <div class="wage_copany_home_candidate">{{this.min_salary}}-{{this.max_salary}} triệu</div>
         <div class="address_company_home_candidate">{{this.location}}</div>
         <div class="experience_company_home_candidate">3-5 năm</div>
@@ -28,7 +28,7 @@
       <div class="item_company_candidate p-2 m-2">
         <img src="{{this.avatarEmployer}}" alt="logo" class="logo_company_home_candidate">
         <a class="title_recuit_company_home_candidate" href="/candidate/detail_job/{{this.doc}}">{{this.title}}</a>
-        <div class="name_company_home_candidate">{{this.nameEmployer}}</div>
+        <a class="name_company_home_candidate" href="http://localhost:3032/candidate/profile_employer?id={{this.belong_employer}}">{{this.nameEmployer}}</a>
         <div class="wage_copany_home_candidate">{{this.min_salary}}-{{this.max_salary}} triệu</div>
         <div class="address_company_home_candidate">{{this.location}}</div>
         <div class="experience_company_home_candidate">3-5 năm</div>
