fix render in modal of report

--- a/src/server_admin/Source/views/content_admin/list_reports.hbs
+++ b/src/server_admin/Source/views/content_admin/list_reports.hbs
@@ -8,8 +8,10 @@
                 Người báo cáo</th>
             <th style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left; width: 20%;">
                 Tin bị báo cáo</th>
-            <th style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left;">
+            <th style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left; width: 45%;">
                 Mô tả báo cáo</th>
+            <th style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                Đã được xử lý</th>
         </tr>
     </table>
 
@@ -33,38 +35,25 @@
         </ul>
     </nav>
 
-    <div class="modal fade" id="modal_evaluate_employer" tabindex="-1" aria-labelledby="modal_updateLabel"
+    <div class="modal fade" id="modal_report_recruitment" tabindex="-1" aria-labelledby="modal_updateLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <img src="/css/style/image/logo_company.svg" alt="logo_company"
-                        class="logo_employer_modal_evaluate">
-                    <div class="name_employer_modal_evaluate">VNG Games</div>
+                    <span class="modal-title" id="exampleModalLabel">Báo cáo:&nbsp;<span
+                            id="name_job_modal_apply_company">{{data.recruitment.title}}</span> </span>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form action="/candidate/evaluate_employer" method="post">
+                <div>
                     <div class="modal-body modal_body_evaluate">
-                        <div id="text_evaluate_quality">Đánh giá chất lượng: </div>
-                        <img src="/css/style/image/ic_star_empty.svg" id="evaluate_modal_star1" alt="evaluate_star1"
-                            onclick="s(this.id)">
-                        <img src="/css/style/image/ic_star_empty.svg" id="evaluate_modal_star2" alt="evaluate_star2"
-                            onclick="s(this.id)">
-                        <img src="/css/style/image/ic_star_empty.svg" id="evaluate_modal_star3" alt="evaluate_star3"
-                            onclick="s(this.id)">
-                        <img src="/css/style/image/ic_star_empty.svg" id="evaluate_modal_star4" alt="evaluate_star4"
-                            onclick="s(this.id)">
-                        <img src="/css/style/image/ic_star_empty.svg" id="evaluate_modal_star5" alt="evaluate_star5"
-                            onclick="s(this.id)">
-                        <input type="text" name="star" value="5" id="result_star" style="display: none;">
-                        <div id="text_content_modal_evaluate">Nội dung:</div>
-                        <textarea name="content" class="form-control" id="content_evaluate" required
-                            placeholder="Đánh giá của bạn về nhà tuyển dụng"></textarea>
-                        <input type="text" name="id_employer" value="{{_id_employer}}" style="display: none;">
-                        <button type="button" id="close_modal_evaluate" data-bs-dismiss="modal">Hủy</button>
-                        <button type="submit" id="submit_modal_evaluate">Gửi</button>
+                        <div id="text_content_modal_report">Nội dung báo cáo:</div>
+                        <textarea name="content" class="form-control" id="content_report"></textarea>
+                        <input type="text" name="id_recruitments" value="{{data.idDocRecruitment}}"
+                            style="display: none;">
+                        {{!-- <button type="button" id="close_modal_report">Hủy</button>
+                        <button type="submit" id="submit_modal_report">Gửi</button> --}}
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
@@ -74,21 +63,31 @@
     const _list_reports = {{{ data.list_reports }}}
 
     for (let i = 0; i < _list_reports.length; i++) {
+        let _status = "✅"
+        if (_list_reports[i].status == "pending") {
+            _status = ""
+        }
+
         $("#table_mamage_recruit").append(`
-            <tr id="${_list_reports[i].id_report}" class="row_report">
+            <tr id="${_list_reports[i].id_report}|||index:${i}" class="row_report">
                 <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; width: 5%;">${i + 1}</td>
                 <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left; width: 20%;">${_list_reports[i].reporter_name}</td>
                 <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left; width: 20%;">${_list_reports[i].reported_title}</td>
-                <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left;">${_list_reports[i].description}</td>
+                <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: left; width: 45%;">${_list_reports[i].description}</td>
+                <td style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">${_status}</td>
             </tr>
         `)
         $("#content_home_admin").append(`
-            <button type="button" id="btn_modal_${_list_reports[i].id_report}" class="btn_apply_to_company_detail_job" data-bs-toggle="modal" data-bs-target="#modal_evaluate_employer" hidden>Đánh giá</button>
+            <button type="button" id="btn_modal_${_list_reports[i].id_report}" data-bs-toggle="modal" data-bs-target="#modal_report_recruitment" hidden></button>
         `)
     }
 
     $(".row_report").click(function () {
-        const _id_report = $(this).attr("id")
-        $(`#btn_modal_${_id_report}`).click()
+        const _id_report_index = $(this).attr("id").split("|||index:")
+
+        $("#name_job_modal_apply_company").html(_list_reports[parseInt(_id_report_index[1])].reported_title)
+        $("#content_report").text(_list_reports[parseInt(_id_report_index[1])].description)
+
+        $(`#btn_modal_${_id_report_index[0]}`).click()
     })
 </script>
