--- a/src/server_candidate/Source/views/candidate/content_profile_employer.hbs
+++ b/src/server_candidate/Source/views/candidate/content_profile_employer.hbs
@@ -80,7 +80,7 @@
 
         </div>
 
-        <div id="rectangle_infor_recruit">
+        <div id="rectangle_infor_company">
             <div id="title_infor_company_detail_job">Thông tin chi tiết</div>
             <div class="circle_icon" id="circle_house_company_detail_job"></div>
             <img src="/css/style/image/ic_house.svg" alt="ic_house" id="ic_house_company_detail_job">
